--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="section1">
         <div class="subheader">
-            <h2>Here is some test</h2>
+            <h2>Here are some tests</h2>
         </div>
         <div class="box-container">
             <div class="box">1</div>
