responsive with flexbox - mola!

--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -10,16 +10,32 @@
     <header class="first-box">
         <h2>Some flexbox properties all the way</h2>
     </header>
-    <div class="section1">
-        <div class="subheader">
-            <h2>Here are some tests</h2>
-        </div>
-        <div class="box-container">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
+    <div class="sections">
 
+        <div class="section1">
+            <div class="subheader">
+                <h2>Here are some tests</h2>
+            </div>
+            <div class="box-container">
+                <div class="box">1
+                    <div class="little-box"><a href="#">ne</a></div>
+                </div>
+                <div class="box">2
+                    <div class="little-box"><a href="#">ñe</a></div>
+                </div>
+                <div class="box">3
+                    <div class="little-box"><a href="#">ña</a></div>
+                </div>
+            </div>
+
+        </div>
+        <div class="section2">
+            <div class="box2">
+                <h2>Clase de Ingles</h2>
+                <p>Gratis</p>
+                <div class="hours"></div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
