--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="sections">
 
-        <div class="section1">
+        <div class="section section1">
             <div class="subheader">
                 <h2>Here are some tests</h2>
             </div>
@@ -29,7 +29,7 @@
             </div>
 
         </div>
-        <div class="section2">
+        <div class="section section2">
             <div class="box2">
                 <h2>Clase de Ingles</h2>
                 <p>Gratis</p>
