--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -31,6 +31,24 @@
         </div>
         <div class="section section2">
             <div class="box2">
+                <h3>Te invitamos a</h3>
+                <div class="name">
+                    <h3>La Iglesia de</h3>
+                    <h1>Jesucristo</h1>
+                    <h3>de los Santos</h3>
+                    <h3>de los Últimos Días</h3>
+                </div>
+
+                    <p><b>Día:</b> Cada Domingo</p>
+                    <p><b>Hora:</b> 10:30 am</p>
+                    <p><b>Dirección:</b> 1330 Whippoorwill Dr, West Columbia, 29169</p>
+                    <p><b>Teléfono:</b>(803) 454-5686</p>
+                    <p><b>Teléfono:</b>(803) 800-1569</p>
+                <div class="hours"></div>
+            </div>
+        </div>
+        <div class="section section3">
+            <div class="box2">
                 <h2>Clase de Ingles</h2>
                 <p>Gratis</p>
                 <div class="hours"></div>
