--- a/flex-box/index.html
+++ b/flex-box/index.html
@@ -1,60 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<div class="container">
-    <header class="first-box">
-        <h2>Some flexbox properties all the way</h2>
-    </header>
-    <div class="sections">
+    <div class="container">
+        <header class="header">
+            <h2>Some flexbox properties all the way</h2>
+        </header>
+        <div class="sections">
 
-        <div class="section section1">
-            <div class="subheader">
-                <h2>Here are some tests</h2>
-            </div>
-            <div class="box-container">
-                <div class="box">1
-                    <div class="little-box"><a href="#">ne</a></div>
+            <div class="section section1">
+                <div class="subheader">
+                    <h2>Here are some tests</h2>
                 </div>
-                <div class="box">2
-                    <div class="little-box"><a href="#">ñe</a></div>
+                <div class="box-container">
+                    <div class="box">1
+                        <div class="little-box"><a href="#">ne</a></div>
+                    </div>
+                    <div class="box">2
+                        <div class="little-box"><a href="#">ñe</a></div>
+                    </div>
+                    <div class="box">3
+                        <div class="little-box"><a href="#">ña</a></div>
+                    </div>
                 </div>
-                <div class="box">3
-                    <div class="little-box"><a href="#">ña</a></div>
-                </div>
-            </div>
 
-        </div>
-        <div class="section section2">
-            <div class="box2">
-                <h3>Te invitamos a</h3>
-                <div class="name">
-                    <h3>La Iglesia de</h3>
-                    <h1>Jesucristo</h1>
-                    <h3>de los Santos</h3>
-                    <h3>de los Últimos Días</h3>
-                </div>
+            </div>
+            <div class="section section2">
+                <div class="box2">
+                    <h3>Te invitamos a</h3>
+                    <div class="name">
+                        <h3>La Iglesia de</h3>
+                        <h1>Jesucristo</h1>
+                        <h3>de los Santos</h3>
+                        <h3>de los Últimos Días</h3>
+                    </div>
 
                     <p><b>Día:</b> Cada Domingo</p>
                     <p><b>Hora:</b> 10:30 am</p>
                     <p><b>Dirección:</b> 1330 Whippoorwill Dr, West Columbia, 29169</p>
                     <p><b>Teléfono:</b>(803) 454-5686</p>
                     <p><b>Teléfono:</b>(803) 800-1569</p>
-                <div class="hours"></div>
+                    <div class="hours"></div>
+                </div>
             </div>
-        </div>
-        <div class="section section3">
-            <div class="box2">
-                <h2>Clase de Ingles</h2>
-                <p>Gratis</p>
-                <div class="hours"></div>
+            <div class="section section3">
+                <div class="box2">
+                    <h2>Clases de Ingles</h2>
+                    <p>Gratis</p>
+                    <div class="hours"></div>
+                </div>
+            </div>
+            <div class="section section4">
+                <div class="box2">
+                    <h2>Clases de Ingles</h2>
+                    <p>Gratis</p>
+                    <div class="hours"></div>
+                </div>
+            </div>
+            <div class="section section4">
+                <div class="box2">
+                    <h2>Clases de Ingles</h2>
+                    <p>Gratis</p>
+                    <div class="hours"></div>
+                </div>
+            </div>
+            <div class="section section4">
+                <div class="box2">
+                    <h2>Clases de Ingles</h2>
+                    <p>Gratis</p>
+                    <div class="hours"></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
